--- a/dev/pug/templates/header.pug
+++ b/dev/pug/templates/header.pug
@@ -11,20 +11,10 @@ html.no-js(lang='es')
 		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Josefin+Sans:300, 400,700')
 		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oswald:700')
 		//- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-		//- link(rel='stylesheet', href='css/normalize.min.css')
+		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css')
 		link(rel='stylesheet', href='css/main.css')
-		//if lt IE 9
+		<!--[if lt IE 9]>
 			script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
-			script.
-				window.html5 || document.write('<script src="js/html5shiv.js"><\\/script>')
+		<![endif]-->
 	body
-		//if lt IE 10
-			p.browserupgrade
-				| Estas usando un navegador
-				strong OBSOLETO E INSEGURO
-				| . Por favor actualizalo
-				a(href='http://browsehappy.com/', style='color: yellow;')
-					strong AQUÍ
-				|  para mejorar tu experiencia y seguridad.
-
-block main
+		block main
