--- a/dev/pug/templates/header.pug
+++ b/dev/pug/templates/header.pug
@@ -12,7 +12,7 @@ html.no-js(lang='es')
 		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oswald:700')
 		//- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css')
-		link(rel='stylesheet', href='css/main.css')
+		link(rel='stylesheet', href='css/styles.css')
 		<!--[if lt IE 9]>
 			script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
 		<![endif]-->
