--- a/dev/pug/templates/header.pug
+++ b/dev/pug/templates/header.pug
@@ -16,5 +16,5 @@ html.no-js(lang='es')
 		<!--[if lt IE 9]>
 			script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
 		<![endif]-->
-	body
+	body.cuerpo
 		block main
