--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -3,13 +3,31 @@ html {
   font-size: 16px;
   color: #535353;
   height: 100%;
+  background: #fff;
 }
 
-body {
+.cuerpo {
   box-sizing: border-box;
   min-width: 280px;
-  border: 20px solid #00b1e3;
   min-height: 100%;
+  position: relative;
+  border-left: 20px solid #0cb6ff;
+  border-right: 20px solid #495aff;
+}
+
+.cuerpo:before, body:after{
+  width: 100%;
+  height: 20px;
+  content: '';
+  background: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.cuerpo:after{
+	top: initial;
+	bottom: 0;
 }
 
 .browserupgrade {
@@ -35,7 +53,8 @@ header #saludo {
   width: 535px;
   text-align: center;
   font-size: 35px;
-  margin: 148px auto;
+  padding-top: 148px;
+  margin: auto;
   .hola {
     display: inline-block;
     background: black;
