--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -1,97 +1,101 @@
 extends templates/header
 block main
 		<!--[if lt IE 10]>
-			p.browserupgrade Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo a(href='http://browsehappy.com/', style='color: yellow;') strong AQUÍ para mejorar tu experiencia y seguridad.
+			p.browserupgrade Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo
+				strong
+					a(href='http://browsehappy.com/')  AQUÍ
+				|  para mejorar tu experiencia y seguridad.
 		<![endif]-->
-		header
-			section#saludo.escalar
-				p.hola ¡Hola!
-				h1
-					| Soy
-					span.bold Joshua Torres
-				h2 Desarrollador Front End
+		header.header
+			section.saludo
+				p.saludo__hola.bubble
+					span ¡Hola!
+				h1.saludo__nombre Soy
+					span.bold  Joshua Torres
+				h2.saludo__cargo Desarrollador Front End
 		section#main-section
 			section#cont-boxes
 				a(href='http://seguristore.cl/', target='_blank')
 					figure
-						img(src='img/15.jpg', alt='Seguristore', width='340', height='300')
+						//- img(src='img/15.jpg', alt='Seguristore', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='http://physiolift-avene.cl/', target='_blank')
 					figure
-						img(src='img/14.jpg', alt='Physiolift', width='340', height='300')
+						//- img(src='img/14.jpg', alt='Physiolift', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/felizconmiredcompra/', target='_blank')
 					figure
-						img(src='img/13.jpg', alt='Feliz Red Compra Landing', width='340', height='300')
+						//- img(src='img/13.jpg', alt='Feliz Red Compra Landing', width='340', height='300')
 						div
 							span Ver Trabajos
 				a(href='trabajos/mjo/', target='_blank')
 					figure
-						img(src='img/12.jpg', alt='Manuel Jose Osandon Landing', width='340', height='300')
+						//- img(src='img/12.jpg', alt='Manuel Jose Osandon Landing', width='340', height='300')
 						div
 							span Ver Trabajos
 				a(href='trabajos/kenwood/', target='_blank')
 					figure
-						img(src='img/11.jpg', alt='Kenwood Landing', width='340', height='300')
+						//- img(src='img/11.jpg', alt='Kenwood Landing', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/fdv/', target='_blank')
 					figure
-						img(src='img/10.jpg', alt='FDV', width='340', height='300')
+						//- img(src='img/10.jpg', alt='FDV', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/umayor/repo/', target='_blank')
 					figure
-						img(src='img/1.jpg', alt='UMayor', width='340', height='300')
+						//- img(src='img/1.jpg', alt='UMayor', width='340', height='300')
 						div
 							span Ver Trabajos
 				a(href='trabajos/umayor/lgenerica/', target='_blank')
 					figure
-						img(src='img/2.jpg', alt='Landing Generica', width='340', height='300')
+						//- img(src='img/2.jpg', alt='Landing Generica', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/finning', target='_blank')
 					figure
-						img(src='img/3.jpg', alt='Finning', width='340', height='300')
+						//- img(src='img/3.jpg', alt='Finning', width='340', height='300')
 						div
 							span Ver Trabajos
 				a(href='trabajos/marsol/', target='_blank')
 					figure
-						img(src='img/4.jpg', alt='Marsol', width='340', height='300')
+						//- img(src='img/4.jpg', alt='Marsol', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/holos/', target='_blank')
 					figure
-						img(src='img/5.jpg', alt='Holos', width='340', height='300')
+						//- img(src='img/5.jpg', alt='Holos', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/tdf/', target='_blank')
 					figure
-						img(src='img/6.jpg', alt='TDF', width='340', height='300')
+						//- img(src='img/6.jpg', alt='TDF', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/entel/', target='_blank')
 					figure
-						img(src='img/7.jpg', alt='Entel', width='340', height='300')
+						//- img(src='img/7.jpg', alt='Entel', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/hf/', target='_blank')
 					figure
-						img(src='img/8.jpg', alt='HF', width='340', height='300')
+						//- img(src='img/8.jpg', alt='HF', width='340', height='300')
 						div
 							span Ver Trabajo
 				a(href='trabajos/apicola/', target='_blank')
 					figure
-						img(src='img/9.jpg', alt='Apicola Santa Adriana', width='340', height='300')
+						//- img(src='img/9.jpg', alt='Apicola Santa Adriana', width='340', height='300')
 						div
 							span Ver Trabajo
-		footer
-			address
-				a(href='mailto:hola@joshua.cl') hola@joshua.cl
+		footer.footer
+			address.correo.bubble.bubbleBig
 				span hola@joshua.cl
-		script.
+			//- address.correo.bubble.bubbleBig
+
+		//- script.
 			// (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			// (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			// m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
