--- a/dev/pug/templates/header.pug
+++ b/dev/pug/templates/header.pug
@@ -7,8 +7,8 @@ html.no-js(lang='es')
 		meta(name='google-site-verification', content='UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI')
 		meta(name='Description', content='Portafolio Web de Joshua Torres - Desarrollador Front End')
 		title Joshua Torres - Desarrollador Front End
-		link(rel='shortcut icon', href='img/favicon.ico')
-		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Josefin+Sans:300, 400,700')
+		link(rel='shortcut icon', href='img/favicon.ico?v=2')
+		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600')
 		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oswald:700')
 		//- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 		link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css')
@@ -16,5 +16,5 @@ html.no-js(lang='es')
 		<!--[if lt IE 9]>
 			script(src='//html5shiv.googlecode.com/svn/trunk/html5.js')
 		<![endif]-->
-	body.cuerpo
+	body.body
 		block main
