--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,338 +1,341 @@
 html {
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 16px;
-  color: #535353;
-  height: 100%;
-  background: #fff;
-}
-
-.cuerpo {
-  box-sizing: border-box;
-  min-width: 280px;
-  min-height: 100%;
-  position: relative;
-  border-left: 20px solid #0cb6ff;
-  border-right: 20px solid #495aff;
-}
-
-.cuerpo:before, body:after{
-  width: 100%;
-  height: 20px;
-  content: '';
-  background: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.cuerpo:after{
-	top: initial;
-	bottom: 0;
-}
-
-.browserupgrade {
-  margin: 0;
-  background: tomato;
-  color: #fff;
-  padding: 0.2em 0;
-  text-align: center;
-  font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Josefin Sans', sans-serif;
+	font-size: 16px;
+	color: #535353;
+	height: 100%;
+	background: #fff;
 }
 
 p {
-  margin: 0;
+	margin: 0;
 }
 
-h1, h2 {
-  font-weight: normal;
-  margin: 0;
+.body {
+	box-sizing: border-box;
+	min-width: 280px;
+	min-height: 100%;
+	position: relative;
+	border-left: 20px solid #0cb6ff;
+	border-right: 20px solid #495aff;
+	&:before, &:after{
+		width: 100%;
+		height: 20px;
+		content: '';
+		background: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	&:after{
+		top: initial;
+		bottom: 0;
+	}
+
 }
 
-header #saludo {
-  width: 535px;
-  text-align: center;
-  font-size: 35px;
-  padding-top: 148px;
-  margin: auto;
-  .hola {
-    display: inline-block;
-    background: black;
-    background: #00b1e3;
+.browserupgrade {
+	margin: 0;
+	background: tomato;
+	color: #fff;
+	padding: 0.2em 0;
+	text-align: center;
+	font-size: 14px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.browserupgrade a{
+	color: yellow;
+}
+
+.saludo {
+	max-width: 535px;
+	text-align: center;
+	font-size: 35px;
+    padding: 148px 0;
+	margin: auto;
+	&__hola {
+		width: 187px;
+	}
+	&__nombre, &__cargo{
+		margin: 0;
+		background: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		color: #495aff;
+	}
+	&__nombre {
+		font-size: 1.8em;
+		font-weight: 400;
+		margin-bottom: 24px;
+	}
+	&__cargo{
+		font-size: 35px;
+		font-weight: 400;
+		margin-bottom: 24px;
+		letter-spacing: -1px;
+	}
+}
+
+.bubble{
+	position: relative;
+	line-height: 57px;
+	margin-bottom: 24px;
+	display: inline-block;
+	background: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
+	color: #fff;
+	padding-bottom: 17px;
+	font-weight: 300;
+	&:before, &:after{
+		content: '';
+		position: absolute;
+		bottom: 0;
+	}
+	&:before{
+		width: 31px;
+		height: 17px;
+		left: 0;
+		background: #fff;
+	}
+	&:after{
+    	width: 73%;
+		right: 0;
+		background: transparent;
+		border-left: 19px solid transparent;
+		border-bottom: 17px solid #fff;
+	}
+	span{
+		margin-top: 5px;
+		display: inline-block;
+	}
+
+}
+
+.bubbleBig{
+	&:after{
+    	width: 81%;
+	}
+}
+
+.footer{
+	padding-bottom: 148px;
+}
+
+.correo {
+	font-style: normal;
+	font-size: 1.8em;
+	width: 272px;
+	margin: 148px auto 0;
+	display: block;
     color: #fff;
-    padding: 8px 48px;
-    position: relative;
-    line-height: 41px;
-  }
+    text-align: center;
+	a {
+		text-decoration: none;
+		color: #fff;
+		display: none;
+	}
 }
 
-footer address {
-  display: inline-block;
-  background: black;
-  background: #00b1e3;
-  color: #fff;
-  padding: 8px 48px;
-  position: relative;
-  line-height: 41px;
-}
-
-header #saludo .hola:after, footer address:after {
-  content: '';
-  position: absolute;
-  top: 56px;
-  left: 31px;
-  border-left: 0px solid transparent;
-  border-right: 20px solid transparent;
-  border-top: 18px solid #00b1e3;
-}
-
-header {
-  #saludo {
-    h1 {
-      font-size: 55px;
-    }
-    h2 {
-      font-size: 35px;
-    }
-  }
-  .hola {
-    margin-bottom: 24px;
-  }
-}
-
-h1, h2 {
-  margin-bottom: 24px;
-}
 
 #main-section {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 #cont-boxes {
-  max-width: 1900px;
-  /*background: lightgreen;*/
-  margin: auto;
-  overflow: hidden;
-  text-align: center;
-  a {
-    display: inline-block;
-    text-decoration: none;
-    margin: 10px;
-  }
-  figure {
-    display: inline-block;
-    position: relative;
-    margin: 0;
-    div {
-      overflow: hidden;
-      width: 100%;
-      height: 0%;
-      /*height: 100%;*/
-      position: absolute;
-      top: 0;
-      left: 0;
-      background: #00b1e3;
-      background: rgba(0, 177, 227, 1);
-      transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-      span {
-        font-size: 1.8em;
-        color: #fff;
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, 330%);
-        transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-      }
+	max-width: 1900px;
+	/*background: lightgreen;*/
+	margin: auto;
+	overflow: hidden;
+	text-align: center;
+	a {
+		display: inline-block;
+		text-decoration: none;
+		margin: 10px;
+	}
+	figure {
+		display: inline-block;
+		position: relative;
+		margin: 0;
+		width: 340px;
+		height: 300px;
+		border: 1px solid green;
+		div {
+			overflow: hidden;
+			width: 100%;
+			height: 0%;
+			/*height: 100%;*/
+			position: absolute;
+			top: 0;
+			left: 0;
+			background: #00b1e3;
+			background: rgba(0, 177, 227, 1);
+			transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
+			span {
+				font-size: 1.8em;
+				color: #fff;
+				display: block;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, 330%);
+				transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
+			}
+		}
+		&:hover div {
+			/*cursor:pointer;*/
+			height: 100%;
+			span {
+				transition-delay: .2s;
+				transform: translate(-50%, -50%);
+			}
+		}
+		img:first-child {
+			width: 100%;
+		}
+	}
+}
+
+
+    .subir {
+    	animation: subir 0.8s cubic-bezier(0.23, 1, 0.32, 1) forwards;
     }
-    &:hover div {
-      /*cursor:pointer;*/
-      height: 100%;
-      span {
-        transition-delay: .2s;
-        transform: translate(-50%, -50%);
-      }
+
+    .bajar {
+    	animation: bajar 0.8s cubic-bezier(0.23, 1, 0.32, 1) forwards;
     }
-    img:first-child {
-      width: 100%;
+
+    .no-subir {
+    	height: 100%;
     }
-  }
-}
 
-/*.overlay{
-	width: 100%;
-	height: 0;
-	background: #fff;
-	background: rgba(255, 255, 255, 1);
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	z-index: 2;
-	overflow: auto;
-}
+    .no-bajar {
+    	height: 0;
+    }
 
-.overlay article{
-	max-width: 600px;
-	min-width: 280px;
-	margin: 40px auto;
-	display: none;
-	text-align: left;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 300;
-	line-height: 1.5em;
-}
+    @keyframes subir {
+    	from {
+    		height: 0%;
+    	}
 
-.overlay article iframe{
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-}*/
-
-/*.overlay article img{
-	width: 100%;
-}
-
-.overlay article .title{
-	color: #00b1e3;
-	font-size: 1.6em;
-	font-weight: 700;
-	margin: 0.8em 0 1em;
-	text-transform: uppercase;
-	font-family: 'Oswald', sans-serif;
-}
-
-.overlay article p{
-	font-size: 1em;
-    margin-bottom: 0.5em;
-}*/
-
-.subir {
-  animation: subir 0.8s cubic-bezier(0.23, 1, 0.32, 1) forwards;
-}
-
-.bajar {
-  animation: bajar 0.8s cubic-bezier(0.23, 1, 0.32, 1) forwards;
-}
-
-.no-subir {
-  height: 100%;
-}
-
-.no-bajar {
-  height: 0;
-}
-
-@keyframes subir {
-  from {
-    height: 0%;
-  }
-
-  to {
-    height: 100%;
-  }
-}
+    	to {
+    		height: 100%;
+    	}
+    }
 
 
-@keyframes bajar {
-  from {
-    height: 100%;
-  }
+    @keyframes bajar {
+    	from {
+    		height: 100%;
+    	}
 
-  to {
-    height: 0%;
-  }
-}
+    	to {
+    		height: 0%;
+    	}
+    }
 
 
 .hide {
-  position: fixed;
-  z-index: 3;
-  width: 30px;
-  height: 30px;
-  top: 40px;
-  right: 40px;
-  background: #fff url('../img/close.png');
-  text-indent: -9999px;
-  display: none;
+	position: fixed;
+	z-index: 3;
+	width: 30px;
+	height: 30px;
+	top: 40px;
+	right: 40px;
+	background: #fff url('../img/close.png');
+	text-indent: -9999px;
+	display: none;
 }
 
-footer {
-  height: 300px;
-  line-height: 300px;
-  text-align: center;
-  font-size: 35px;
-  address {
-    font-style: normal;
-  }
-  a {
-    text-decoration: none;
-    color: #fff;
-    display: none;
-  }
+.bold {
+	font-weight: 600;
 }
+
+    // footer {
+    // 	height: 300px;
+    // 	line-height: 300px;
+    // 	text-align: center;
+    // 	font-size: 35px;
+    // 	background: red;
+    // 	address {
+    // 		font-style: normal;
+    // 	}
+    // 	a {
+    // 		text-decoration: none;
+    // 		color: #fff;
+    // 		display: none;
+    // 	}
+    // }
 
 /*.loading{
 	background:#fff url('../img/preloader.gif') no-repeat center center;
-}*/
+	}*/
 
 /* ==========================================================================
    Media Queries
    ========================================================================== */
 @media (max-width: 786px) {
-  footer {
-    font-size: 26px;
-    a {
-      display: block;
-    }
-    span {
-      display: none;
-    }
-  }
+
+	.saludo{
+		padding: 88px 0;
+		&__nombre{
+			font-size: 8.2vw;
+		}
+		&__cargo{
+			font-size: 4.5vw;
+		}
+	}
+
+	.footer{
+		padding-bottom: 88px;
+	}
+
 }
 
-@media (max-width: 620px) {
-  body {
-    box-sizing: content-box;
-  }
-  .overlay article {
-    margin: 2%;
-  }
-  .hide {
-    top: 1%;
-    right: 2%;
-  }
-  footer {
-    height: 180px;
-    line-height: 180px;
-  }
+@media (max-width: 425px) {
+
+	.saludo{
+		&__nombre{
+			font-size: 10vw;
+		}
+		&__cargo{
+			font-size: 7vw;
+		}
+	}
+
 }
 
-@media (max-width: 570px) {
-  header {
-    #saludo {
-      width: 265px;
-      margin: 40px auto;
-      h1 {
-        font-size: 35px;
-        margin-bottom: 12px;
-      }
-      h2 {
-        font-size: 22px;
-      }
-    }
-    .hola {
-      margin-bottom: 24px;
-    }
-  }
-  h1, h2 {
-    margin-bottom: 24px;
-  }
-}
+// @media (max-width: 620px) {
+// 	body {
+// 		box-sizing: content-box;
+// 	}
+// 	.overlay article {
+// 		margin: 2%;
+// 	}
+// 	.hide {
+// 		top: 1%;
+// 		right: 2%;
+// 	}
 
-.bold {
-  font-weight: 700;
-}
+// }
+
+// @media (max-width: 570px) {
+// 	header {
+// 		#saludo {
+// 			width: 265px;
+// 			margin: 40px auto;
+// 			h1 {
+// 				font-size: 35px;
+// 				margin-bottom: 12px;
+// 			}
+// 			h2 {
+// 				font-size: 22px;
+// 			}
+// 		}
+// 		.hola {
+// 			margin-bottom: 24px;
+// 		}
+// 	}
+// 	h1, h2 {
+// 		margin-bottom: 24px;
+// 	}
+// }
+
