--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -13,87 +13,53 @@ block main
 				h1.saludo__nombre Soy
 					span.bold  Joshua Torres
 				h2.saludo__cargo Desarrollador Front End
-		section#main-section
-			section#cont-boxes
+		section.main-section
+			section.cont-boxes
 				a(href='http://seguristore.cl/', target='_blank')
-					figure
-						//- img(src='img/15.jpg', alt='Seguristore', width='340', height='300')
-						div
-							span Ver Trabajo
+					div.box
+						img(src='img/logos/seguristore.png', alt='Seguristore', width='300', height='300').box__img
 				a(href='http://physiolift-avene.cl/', target='_blank')
-					figure
-						//- img(src='img/14.jpg', alt='Physiolift', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/felizconmiredcompra/', target='_blank')
-					figure
-						//- img(src='img/13.jpg', alt='Feliz Red Compra Landing', width='340', height='300')
-						div
-							span Ver Trabajos
-				a(href='trabajos/mjo/', target='_blank')
-					figure
-						//- img(src='img/12.jpg', alt='Manuel Jose Osandon Landing', width='340', height='300')
-						div
-							span Ver Trabajos
-				a(href='trabajos/kenwood/', target='_blank')
-					figure
-						//- img(src='img/11.jpg', alt='Kenwood Landing', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/fdv/', target='_blank')
-					figure
-						//- img(src='img/10.jpg', alt='FDV', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/umayor/repo/', target='_blank')
-					figure
-						//- img(src='img/1.jpg', alt='UMayor', width='340', height='300')
-						div
-							span Ver Trabajos
-				a(href='trabajos/umayor/lgenerica/', target='_blank')
-					figure
-						//- img(src='img/2.jpg', alt='Landing Generica', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/finning', target='_blank')
-					figure
-						//- img(src='img/3.jpg', alt='Finning', width='340', height='300')
-						div
-							span Ver Trabajos
-				a(href='trabajos/marsol/', target='_blank')
-					figure
-						//- img(src='img/4.jpg', alt='Marsol', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/holos/', target='_blank')
-					figure
-						//- img(src='img/5.jpg', alt='Holos', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/tdf/', target='_blank')
-					figure
-						//- img(src='img/6.jpg', alt='TDF', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/entel/', target='_blank')
-					figure
-						//- img(src='img/7.jpg', alt='Entel', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/hf/', target='_blank')
-					figure
-						//- img(src='img/8.jpg', alt='HF', width='340', height='300')
-						div
-							span Ver Trabajo
-				a(href='trabajos/apicola/', target='_blank')
-					figure
-						//- img(src='img/9.jpg', alt='Apicola Santa Adriana', width='340', height='300')
-						div
-							span Ver Trabajo
+					div.box
+						img(src='img/logos/physiolift.png', alt='Avene Physiolift', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/solares/', target='_blank')
+					div.box
+						img(src='img/logos/solares.png', alt='Avene Solares', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/bci-cib/', target='_blank')
+					div.box
+						img(src='img/logos/bci.png', alt='Bci', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/felizconmiredcompra/', target='_blank')
+					div.box
+						img(src='img/logos/redcompra.png', alt='Feliz Red Compra Landing', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/mjo/', target='_blank')
+					div.box
+						img(src='img/logos/mjo.png', alt='Manuel Jose Osandon Landing', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/kenwood/', target='_blank')
+					div.box
+						img(src='img/logos/kenwood.png', alt='Kenwood Landing', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/fdv/', target='_blank')
+					div.box
+						img(src='img/logos/fdv.png', alt='FDV', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/umayor/repo/', target='_blank')
+					div.box
+						img(src='img/logos/postgrado_mayor.png', alt='UMayor', width='300', height='300').box__img
+				//- a(href='http://www.joshua.cl/trabajos/umayor/lgenerica/', target='_blank')
+				//- 	div.box
+						//- img(src='img/logos/2.jpg', alt='Landing Generica', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/finning', target='_blank')
+					div.box
+						img(src='img/logos/finning.png', alt='Finning', width='300', height='300').box__img
+				a(href='http://marsol.cl/', target='_blank')
+					div.box
+						img(src='img/logos/marsol.png', alt='Marsol', width='300', height='300').box__img
+				//- a(href='http://www.joshua.cl/trabajos/tdf/', target='_blank')
+				//- 	div.box
+				//- 	//- 	img(src='img/logos/logos/tdf.png', alt='TDF', width='300', height='300').box__img
+				a(href='http://www.joshua.cl/trabajos/apicola/', target='_blank')
+					div.box
+						img(src='img/logos/apicola.png', alt='Apicola Santa Adriana', width='300', height='300').box__img
 		footer.footer
 			address.correo.bubble.bubbleBig
 				span hola@joshua.cl
-			//- address.correo.bubble.bubbleBig
 
 		//- script.
 			// (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
