--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,9 +1,17 @@
+$gradient-main: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
+
 html {
 	font-family: 'Josefin Sans', sans-serif;
 	font-size: 16px;
 	color: #535353;
 	height: 100%;
 	background: #fff;
+
+	// background: lightgreen;
+}
+
+a {
+	text-decoration: none;
 }
 
 p {
@@ -21,7 +29,7 @@ p {
 		width: 100%;
 		height: 20px;
 		content: '';
-		background: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
+		background: $gradient-main;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -58,10 +66,10 @@ p {
 	}
 	&__nombre, &__cargo{
 		margin: 0;
-		background: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
+		background: $gradient-main;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
-		color: #495aff;
+		color: #fff;
 	}
 	&__nombre {
 		font-size: 1.8em;
@@ -81,10 +89,11 @@ p {
 	line-height: 57px;
 	margin-bottom: 24px;
 	display: inline-block;
-	background: linear-gradient(to right, #0cb6ff 0%,#495aff 100%);
+	background: $gradient-main;
 	color: #fff;
 	padding-bottom: 17px;
 	font-weight: 300;
+
 	&:before, &:after{
 		content: '';
 		position: absolute;
@@ -136,138 +145,42 @@ p {
 }
 
 
-#main-section {
+.main-section {
 	overflow: hidden;
 }
 
-#cont-boxes {
-	max-width: 1900px;
-	/*background: lightgreen;*/
+.cont-boxes {
+// 	max-width: 1900px;
+    max-width: 1670px;
+// 	background: red;
+// 	background: #f8faff;
 	margin: auto;
 	overflow: hidden;
 	text-align: center;
-	a {
-		display: inline-block;
-		text-decoration: none;
-		margin: 10px;
-	}
-	figure {
+	// padding-bottom: 50px;
+	.box {
 		display: inline-block;
 		position: relative;
-		margin: 0;
-		width: 340px;
+		margin: 0 15px 30px;
+		width: 300px;
 		height: 300px;
-		border: 1px solid green;
-		div {
-			overflow: hidden;
-			width: 100%;
-			height: 0%;
-			/*height: 100%;*/
-			position: absolute;
-			top: 0;
-			left: 0;
-			background: #00b1e3;
-			background: rgba(0, 177, 227, 1);
-			transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-			span {
-				font-size: 1.8em;
-				color: #fff;
-				display: block;
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, 330%);
-				transition: all 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-			}
-		}
-		&:hover div {
-			/*cursor:pointer;*/
-			height: 100%;
-			span {
-				transition-delay: .2s;
-				transform: translate(-50%, -50%);
-			}
-		}
-		img:first-child {
-			width: 100%;
-		}
+		background: #fff;
+		border-radius: 3px;
+    	box-shadow: 0 10px 40px 0 rgba(62,57,107,0.07), 0 2px 9px 0 rgba(62,57,107,0.06);
+		transition: transform 0.2s ease, box-shadow 0.2s ease;
+    	&:hover{
+    		transform: translateY(-5px) translateZ(0);
+    		box-shadow: 0 16px 32px 0 rgba(62,57,107,0.28), 0 0 0 transparent;
+    	}
+    	.box__img{
+    		display: block;
+    	}
 	}
-}
-
-
-    .subir {
-    	animation: subir 0.8s cubic-bezier(0.23, 1, 0.32, 1) forwards;
-    }
-
-    .bajar {
-    	animation: bajar 0.8s cubic-bezier(0.23, 1, 0.32, 1) forwards;
-    }
-
-    .no-subir {
-    	height: 100%;
-    }
-
-    .no-bajar {
-    	height: 0;
-    }
-
-    @keyframes subir {
-    	from {
-    		height: 0%;
-    	}
-
-    	to {
-    		height: 100%;
-    	}
-    }
-
-
-    @keyframes bajar {
-    	from {
-    		height: 100%;
-    	}
-
-    	to {
-    		height: 0%;
-    	}
-    }
-
-
-.hide {
-	position: fixed;
-	z-index: 3;
-	width: 30px;
-	height: 30px;
-	top: 40px;
-	right: 40px;
-	background: #fff url('../img/close.png');
-	text-indent: -9999px;
-	display: none;
 }
 
 .bold {
 	font-weight: 600;
 }
-
-    // footer {
-    // 	height: 300px;
-    // 	line-height: 300px;
-    // 	text-align: center;
-    // 	font-size: 35px;
-    // 	background: red;
-    // 	address {
-    // 		font-style: normal;
-    // 	}
-    // 	a {
-    // 		text-decoration: none;
-    // 		color: #fff;
-    // 		display: none;
-    // 	}
-    // }
-
-/*.loading{
-	background:#fff url('../img/preloader.gif') no-repeat center center;
-	}*/
 
 /* ==========================================================================
    Media Queries
@@ -302,40 +215,3 @@ p {
 	}
 
 }
-
-// @media (max-width: 620px) {
-// 	body {
-// 		box-sizing: content-box;
-// 	}
-// 	.overlay article {
-// 		margin: 2%;
-// 	}
-// 	.hide {
-// 		top: 1%;
-// 		right: 2%;
-// 	}
-
-// }
-
-// @media (max-width: 570px) {
-// 	header {
-// 		#saludo {
-// 			width: 265px;
-// 			margin: 40px auto;
-// 			h1 {
-// 				font-size: 35px;
-// 				margin-bottom: 12px;
-// 			}
-// 			h2 {
-// 				font-size: 22px;
-// 			}
-// 		}
-// 		.hola {
-// 			margin-bottom: 24px;
-// 		}
-// 	}
-// 	h1, h2 {
-// 		margin-bottom: 24px;
-// 	}
-// }
-
