--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -1,70 +1,54 @@
 extends templates/header
 block main
-		<!--[if lt IE 10]>
-			p.browserupgrade Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo
-				strong
-					a(href='http://browsehappy.com/')  AQUÍ
-				|  para mejorar tu experiencia y seguridad.
-		<![endif]-->
-		header.header
-			section.saludo
-				p.saludo__hola.bubble
-					span ¡Hola!
-				h1.saludo__nombre Soy
-					span.bold  Joshua Torres
-				h2.saludo__cargo Desarrollador Front End
-		section.main-section
-			section.cont-boxes
-				a(href='http://seguristore.cl/', target='_blank')
-					div.box
-						img(src='img/logos/seguristore.png', alt='Seguristore', width='300', height='300').box__img
-				a(href='http://physiolift-avene.cl/', target='_blank')
-					div.box
-						img(src='img/logos/physiolift.png', alt='Avene Physiolift', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/solares/', target='_blank')
-					div.box
-						img(src='img/logos/solares.png', alt='Avene Solares', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/bci-cib/', target='_blank')
-					div.box
-						img(src='img/logos/bci.png', alt='Bci', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/felizconmiredcompra/', target='_blank')
-					div.box
-						img(src='img/logos/redcompra.png', alt='Feliz Red Compra Landing', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/mjo/', target='_blank')
-					div.box
-						img(src='img/logos/mjo.png', alt='Manuel Jose Osandon Landing', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/kenwood/', target='_blank')
-					div.box
-						img(src='img/logos/kenwood.png', alt='Kenwood Landing', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/fdv/', target='_blank')
-					div.box
-						img(src='img/logos/fdv.png', alt='FDV', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/umayor/repo/', target='_blank')
-					div.box
-						img(src='img/logos/postgrado_mayor.png', alt='UMayor', width='300', height='300').box__img
-				//- a(href='http://www.joshua.cl/trabajos/umayor/lgenerica/', target='_blank')
-				//- 	div.box
-						//- img(src='img/logos/2.jpg', alt='Landing Generica', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/finning', target='_blank')
-					div.box
-						img(src='img/logos/finning.png', alt='Finning', width='300', height='300').box__img
-				a(href='http://marsol.cl/', target='_blank')
-					div.box
-						img(src='img/logos/marsol.png', alt='Marsol', width='300', height='300').box__img
-				//- a(href='http://www.joshua.cl/trabajos/tdf/', target='_blank')
-				//- 	div.box
-				//- 	//- 	img(src='img/logos/logos/tdf.png', alt='TDF', width='300', height='300').box__img
-				a(href='http://www.joshua.cl/trabajos/apicola/', target='_blank')
-					div.box
-						img(src='img/logos/apicola.png', alt='Apicola Santa Adriana', width='300', height='300').box__img
-		footer.footer
-			address.correo.bubble.bubbleBig
-				span hola@joshua.cl
-
-		//- script.
-			// (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			// (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			// m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			// })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-			// ga('create', 'UA-74295870-1', 'auto');
-			// ga('send', 'pageview');
+	<!--[if lt IE 10]>
+		p.browserupgrade Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo
+			strong
+				a(href='http://browsehappy.com/')  AQUÍ
+			|  para mejorar tu experiencia y seguridad.
+	<![endif]-->
+	header.header
+		section.saludo
+			p.saludo__hola.bubble
+				span ¡Hola!
+			h1.saludo__nombre Soy
+				span.bold  Joshua Torres
+			h2.saludo__cargo Desarrollador Front End
+	section.main-section
+		section.cont-boxes
+			a(href='http://seguristore.cl/', target='_blank')
+				div.box
+					img(src='img/logos/seguristore.png', alt='Seguristore', width='300', height='300').box__img
+			a(href='http://physiolift-avene.cl/', target='_blank')
+				div.box
+					img(src='img/logos/physiolift.png', alt='Avene Physiolift', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/solares/', target='_blank')
+				div.box
+					img(src='img/logos/solares.png', alt='Avene Solares', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/bci-cib/', target='_blank')
+				div.box
+					img(src='img/logos/bci.png', alt='Bci', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/felizconmiredcompra/', target='_blank')
+				div.box
+					img(src='img/logos/redcompra.png', alt='Feliz Red Compra Landing', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/mjo/', target='_blank')
+				div.box
+					img(src='img/logos/mjo.png', alt='Manuel Jose Osandon Landing', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/kenwood/', target='_blank')
+				div.box
+					img(src='img/logos/kenwood.png', alt='Kenwood Landing', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/fdv/', target='_blank')
+				div.box
+					img(src='img/logos/fdv.png', alt='FDV', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/umayor/repo/', target='_blank')
+				div.box
+					img(src='img/logos/postgrado_mayor.png', alt='UMayor', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/finning', target='_blank')
+				div.box
+					img(src='img/logos/finning.png', alt='Finning', width='300', height='300').box__img
+			a(href='http://marsol.cl/', target='_blank')
+				div.box
+					img(src='img/logos/marsol.png', alt='Marsol', width='300', height='300').box__img
+			a(href='http://www.joshua.cl/trabajos/apicola/', target='_blank')
+				div.box
+					img(src='img/logos/apicola.png', alt='Apicola Santa Adriana', width='300', height='300').box__img
+	include templates/footer.pug
