Creacion de la pagina interna de algunos trabajos

--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -24,7 +24,7 @@ block main
 			a(href='http://www.joshua.cl/trabajos/solares/', target='_blank')
 				div.box
 					img(src='img/logos/solares.png', alt='Avene Solares', width='300', height='300').box__img
-			a(href='http://www.joshua.cl/trabajos/bci-cib/', target='_blank')
+			a(href='bci.html')
 				div.box
 					img(src='img/logos/bci.png', alt='Bci', width='300', height='300').box__img
 			a(href='http://www.joshua.cl/trabajos/felizconmiredcompra/', target='_blank')
