--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -6,8 +6,6 @@ html {
 	color: #535353;
 	height: 100%;
 	background: #fff;
-
-	// background: lightgreen;
 }
 
 a {
@@ -59,10 +57,11 @@ p {
 	max-width: 535px;
 	text-align: center;
 	font-size: 35px;
-    padding: 148px 0;
+    padding: 148px 0 80px;
 	margin: auto;
 	&__hola {
 		width: 187px;
+		color: #fff;
 	}
 	&__nombre, &__cargo{
 		margin: 0;
@@ -82,6 +81,9 @@ p {
 		margin-bottom: 24px;
 		letter-spacing: -1px;
 	}
+	&-cliente{
+		padding-bottom: 50px;
+	}
 }
 
 .bubble{
@@ -93,6 +95,7 @@ p {
 	color: #fff;
 	padding-bottom: 17px;
 	font-weight: 300;
+	box-sizing: content-box;
 
 	&:before, &:after{
 		content: '';
@@ -133,7 +136,7 @@ p {
 	font-style: normal;
 	font-size: 1.8em;
 	width: 272px;
-	margin: 148px auto 0;
+	margin: 80px auto 0;
 	display: block;
     color: #fff;
     text-align: center;
@@ -150,31 +153,48 @@ p {
 }
 
 .cont-boxes {
-// 	max-width: 1900px;
     max-width: 1670px;
-// 	background: red;
-// 	background: #f8faff;
 	margin: auto;
 	overflow: hidden;
 	text-align: center;
-	// padding-bottom: 50px;
-	.box {
-		display: inline-block;
-		position: relative;
-		margin: 0 15px 30px;
-		width: 300px;
-		height: 300px;
-		background: #fff;
-		border-radius: 3px;
-    	box-shadow: 0 10px 40px 0 rgba(62,57,107,0.07), 0 2px 9px 0 rgba(62,57,107,0.06);
-		transition: transform 0.2s ease, box-shadow 0.2s ease;
-    	&:hover{
-    		transform: translateY(-5px) translateZ(0);
-    		box-shadow: 0 16px 32px 0 rgba(62,57,107,0.28), 0 0 0 transparent;
-    	}
-    	.box__img{
-    		display: block;
-    	}
+}
+
+.box {
+	display: inline-block;
+	position: relative;
+	margin: 0 15px 30px;
+	width: 300px;
+	height: 300px;
+	background: #fff;
+	border-radius: 3px;
+	box-shadow: 0 10px 40px 0 rgba(62,57,107,0.07), 0 2px 9px 0 rgba(62,57,107,0.06);
+	transition: transform 0.2s ease, box-shadow 0.2s ease;
+	&:hover{
+		transform: translateY(-5px) translateZ(0);
+		box-shadow: 0 16px 32px 0 rgba(62,57,107,0.28), 0 0 0 transparent;
+	}
+	.box__img{
+		display: block;
+	}
+	&-txt{
+	// 	font-family: 'Oswald', sans-serif;
+		height: 80px;
+		line-height: 80px;
+		color: #a4a4a4;
+		font-size: 1.3em;
+		font-weight: 600;
+	}
+}
+
+.infoCliente{
+	text-align: center;
+	color: #495aff;
+	padding-bottom: 80px;
+	margin: 0 4%;
+	&__link{
+    	margin-left: 7px;
+    	color: #495aff;
+    	border-bottom: 1px solid #495aff;
 	}
 }
 
@@ -185,6 +205,14 @@ p {
 /* ==========================================================================
    Media Queries
    ========================================================================== */
+@media (max-height: 768px) {
+
+	.saludo{
+	    padding: 100px 0 50px;
+	}
+
+}
+
 @media (max-width: 786px) {
 
 	.saludo{
