--- a/dev/pug/bci.pug
+++ b/dev/pug/bci.pug
@@ -8,7 +8,7 @@ block main
 	<![endif]-->
 	header.header
 		section.saludo.saludo-cliente
-			a(href='index.html')
+			a(href='http://www.joshua.cl/')
 				p.saludo__hola.bubble
 					span ¡Hola!
 				h1.saludo__nombre Soy
