--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -18,7 +18,7 @@ p {
 
 .body {
 	box-sizing: border-box;
-	min-width: 280px;
+	min-width: 320px;
 	min-height: 100%;
 	position: relative;
 	border-left: 20px solid #0cb6ff;
@@ -100,17 +100,18 @@ p {
 	&:before, &:after{
 		content: '';
 		position: absolute;
-		bottom: 0;
+		bottom: -2px;
 	}
 	&:before{
-		width: 31px;
+		width: 34px;
 		height: 17px;
-		left: 0;
+		left: -1px;
 		background: #fff;
+// 		background: red;
 	}
 	&:after{
-    	width: 73%;
-		right: 0;
+    	width: 74%;
+		right: -1px;
 		background: transparent;
 		border-left: 19px solid transparent;
 		border-bottom: 17px solid #fff;
@@ -147,7 +148,6 @@ p {
 	}
 }
 
-
 .main-section {
 	overflow: hidden;
 }
@@ -164,7 +164,7 @@ p {
 	position: relative;
 	margin: 0 15px 30px;
 	width: 300px;
-	height: 300px;
+	// height: 300px;
 	background: #fff;
 	border-radius: 3px;
 	box-shadow: 0 10px 40px 0 rgba(62,57,107,0.07), 0 2px 9px 0 rgba(62,57,107,0.06);
@@ -173,11 +173,14 @@ p {
 		transform: translateY(-5px) translateZ(0);
 		box-shadow: 0 16px 32px 0 rgba(62,57,107,0.28), 0 0 0 transparent;
 	}
-	.box__img{
+	&__img{
 		display: block;
+		max-width: 100%;
+		height: auto;
 	}
 	&-txt{
 	// 	font-family: 'Oswald', sans-serif;
+		width: 300px;
 		height: 80px;
 		line-height: 80px;
 		color: #a4a4a4;
@@ -216,12 +219,19 @@ p {
 @media (max-width: 786px) {
 
 	.saludo{
-		padding: 88px 0;
+		padding: 88px 0 28px;
 		&__nombre{
 			font-size: 8.2vw;
 		}
 		&__cargo{
 			font-size: 4.5vw;
+		}
+	}
+
+	.box{
+		width: 150px;
+		&-txt{
+			width: 300px;
 		}
 	}
 
@@ -240,6 +250,18 @@ p {
 		&__cargo{
 			font-size: 7vw;
 		}
+	}
+
+	.box{
+	    width: 104px;
+    	margin: 0 5px 10px;
+    	&-txt{
+			width: 90%;
+		}
+	}
+
+	.correo{
+		transform: scale(.8);
 	}
 
 }
