Creacion paginas interiores BCI y REDCOMPRA

--- a/dev/pug/bci.pug
+++ b/dev/pug/bci.pug
@@ -8,12 +8,13 @@ block main
 	<![endif]-->
 	header.header
 		section.saludo.saludo-cliente
-			a(href='http://www.joshua.cl/')
+			a(href="index.html")
 				p.saludo__hola.bubble
-					span ¡Hola!
-				h1.saludo__nombre Soy
-					span.bold  Joshua Torres
-				h2.saludo__cargo Desarrollador Front End
+					span Inicio
+			h1.saludo__nombre
+				span.bold  Bci CIB
+			//- h2.saludo__cargo Trabajos
+		//- a(href="index.html").btn__volver.center Inicio
 	section.main-section
 		p.infoCliente Widgets realizados para la pagina
 			a(href='https://www.bci.cl/cib', target='_blank').infoCliente__link CIB
