--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -27,7 +27,7 @@ block main
 			a(href='bci.html')
 				div.box
 					img(src='img/logos/bci.png', alt='Bci', width='300', height='300').box__img
-			a(href='http://www.joshua.cl/trabajos/felizconmiredcompra/', target='_blank')
+			a(href='redcompra.html')
 				div.box
 					img(src='img/logos/redcompra.png', alt='Feliz Red Compra Landing', width='300', height='300').box__img
 			a(href='http://www.joshua.cl/trabajos/mjo/', target='_blank')
