--- a/dev/pug/templates/header.pug
+++ b/dev/pug/templates/header.pug
@@ -6,7 +6,7 @@ html.no-js(lang='es')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
 		meta(name='google-site-verification', content='UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI')
 		meta(name='Description', content='Portafolio Web de Joshua Torres - Desarrollador Front End')
-		title Joshua Torres - Desarrollador Front End
+		title Portafolio Web de Joshua Torres - Desarrollador Front End
 		link(rel='apple-touch-icon-precomposed', sizes='144x144', href='http://www.joshua.cl/apple-touch-icon-144x144.png')
 		link(rel='apple-touch-icon-precomposed', sizes='152x152', href='http://www.joshua.cl/apple-touch-icon-152x152.png')
 		link(rel='icon', type='image/png', href='http://www.joshua.cl/favicon-32x32.png', sizes='32x32')
