--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -83,6 +83,7 @@ p {
 	}
 	&-cliente{
 		padding-bottom: 50px;
+		padding-bottom: 0;
 	}
 }
 
@@ -150,13 +151,25 @@ p {
 
 .main-section {
 	overflow: hidden;
+	// background: red;
 }
 
 .cont-boxes {
-    max-width: 1670px;
+    max-width: 1336px;
+    // background: lightgreen;
 	margin: auto;
+	padding: 5px 0 0;
 	overflow: hidden;
 	text-align: center;
+	position: relative;
+	&__hide{
+		position: absolute;
+		top: 0;
+		left: 0;
+		background: #fff;
+		// background: red;
+		// height: 100%;
+	}
 }
 
 .box {
@@ -186,6 +199,8 @@ p {
 		color: #a4a4a4;
 		font-size: 1.3em;
 		font-weight: 600;
+		// display: block;
+		// margin: 0 auto 30px;
 	}
 }
 
@@ -193,12 +208,28 @@ p {
 	text-align: center;
 	color: #495aff;
 	padding-bottom: 80px;
-	margin: 0 4%;
+	padding-bottom: 60px;
+	margin: 0 10%;
 	&__link{
     	margin-left: 7px;
     	color: #495aff;
     	border-bottom: 1px solid #495aff;
 	}
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.btn__volver{
+	color: #495aff;
+	font-size: 2em;
+	font-weight: 600;
+	top: 90px;
 }
 
 .bold {
@@ -252,16 +283,22 @@ p {
 		}
 	}
 
+	.cont-boxes{
+		padding: 5px 0 12px;
+	}
+
 	.box{
 	    width: 104px;
     	margin: 0 5px 10px;
     	&-txt{
 			width: 90%;
+			margin: 0 15px 30px;
 		}
 	}
 
 	.correo{
 		transform: scale(.8);
+		margin: 50px auto 0;
 	}
 
 }
