Creacion paginas interiores Finning, Postgrado Mayor, Mjo

--- a/dev/pug/redcompra.pug
+++ b/dev/pug/redcompra.pug
@@ -7,14 +7,12 @@ block main
 			|  para mejorar tu experiencia y seguridad.
 	<![endif]-->
 	header.header
-		section.saludo.saludo-cliente
+		section.saludo.saludo--cliente
 			a(href="index.html")
 				p.saludo__hola.bubble
 					span Inicio
 			h1.saludo__nombre
 				span.bold  RedCompra
-			//- h2.saludo__cargo Trabajos
-		//- a(href="index.html").btn__volver.center Inicio
 	section.main-section
 		p.infoCliente Landing de RedCompra para agencia
 			a(href='http://love.cl/', target='_blank').infoCliente__link Love
