--- a/dev/pug/bci.pug
+++ b/dev/pug/bci.pug
@@ -7,14 +7,12 @@ block main
 			|  para mejorar tu experiencia y seguridad.
 	<![endif]-->
 	header.header
-		section.saludo.saludo-cliente
+		section.saludo.saludo--cliente
 			a(href="index.html")
 				p.saludo__hola.bubble
 					span Inicio
 			h1.saludo__nombre
 				span.bold  Bci CIB
-			//- h2.saludo__cargo Trabajos
-		//- a(href="index.html").btn__volver.center Inicio
 	section.main-section
 		p.infoCliente Widgets realizados para la pagina
 			a(href='https://www.bci.cl/cib', target='_blank').infoCliente__link CIB
