--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -30,21 +30,21 @@ block main
 			a(href='redcompra.html')
 				div.box
 					img(src='img/logos/redcompra.png', alt='Feliz Red Compra Landing', width='300', height='300').box__img
-			a(href='http://www.joshua.cl/trabajos/mjo/', target='_blank')
+			a(href='mjo.html', target='_blank')
 				div.box
 					img(src='img/logos/mjo.png', alt='Manuel Jose Osandon Landing', width='300', height='300').box__img
+			a(href='postgrado_mayor.html')
+				div.box
+					img(src='img/logos/postgrado_mayor.png', alt='UMayor', width='300', height='300').box__img
+			a(href='finning.html')
+				div.box
+					img(src='img/logos/finning.png', alt='Finning', width='300', height='300').box__img
 			a(href='http://www.joshua.cl/trabajos/kenwood/', target='_blank')
 				div.box
 					img(src='img/logos/kenwood.png', alt='Kenwood Landing', width='300', height='300').box__img
 			a(href='http://www.joshua.cl/trabajos/fdv/', target='_blank')
 				div.box
 					img(src='img/logos/fdv.png', alt='FDV', width='300', height='300').box__img
-			a(href='http://www.joshua.cl/trabajos/umayor/repo/', target='_blank')
-				div.box
-					img(src='img/logos/postgrado_mayor.png', alt='UMayor', width='300', height='300').box__img
-			a(href='http://www.joshua.cl/trabajos/finning', target='_blank')
-				div.box
-					img(src='img/logos/finning.png', alt='Finning', width='300', height='300').box__img
 			a(href='http://marsol.cl/', target='_blank')
 				div.box
 					img(src='img/logos/marsol.png', alt='Marsol', width='300', height='300').box__img
