--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -18,19 +18,19 @@ block main
 			a(href='http://www.joshua.cl/trabajos/solares/', target='_blank')
 				div.box
 					img(src='img/logos/solares.png', alt='Avene Solares', width='300', height='300').box__img
-			a(href='bci.html')
+			a(href='bci')
 				div.box
 					img(src='img/logos/bci.png', alt='Bci', width='300', height='300').box__img
-			a(href='redcompra.html')
+			a(href='redcompra')
 				div.box
 					img(src='img/logos/redcompra.png', alt='Feliz Red Compra Landing', width='300', height='300').box__img
-			a(href='mjo.html', target='_blank')
+			a(href='mjo', target='_blank')
 				div.box
 					img(src='img/logos/mjo.png', alt='Manuel Jose Osandon Landing', width='300', height='300').box__img
-			a(href='postgrado_mayor.html')
+			a(href='postgrado_mayor')
 				div.box
 					img(src='img/logos/postgrado_mayor.png', alt='UMayor', width='300', height='300').box__img
-			a(href='finning.html')
+			a(href='finning')
 				div.box
 					img(src='img/logos/finning.png', alt='Finning', width='300', height='300').box__img
 			a(href='http://www.joshua.cl/trabajos/kenwood/', target='_blank')
