--- a/dev/pug/postgrado_mayor.pug
+++ b/dev/pug/postgrado_mayor.pug
@@ -2,7 +2,7 @@ extends templates/header
 block main
 	header.header
 		section.saludo.saludo--cliente
-			a(href="index.html")
+			a(href="http://www.joshua.cl/")
 				p.saludo__hola.bubble
 					span Inicio
 			h1.saludo__nombre
